--- a/Bead.cabal
+++ b/Bead.cabal
@@ -10,25 +10,13 @@ Stability: Experimental
 Build-Type: Simple
 Cabal-Version: >= 1.2
 
-Flag SnapFrontend
-  Description: Include API for web frontend.
-  -- Cabal checks if the configuration is possible, first
-  -- with this flag set to True and if not it tries with False
-  Default: False
-
 Executable Bead
+  Main-is: SnapMain.hs
   HS-Source-Dirs: src
-  Build-Depends: base, directory, containers, filepath, time, parsec, mtl,
-                 transformers, temporary
-
-  if flag(snapfrontend)
-    Main-is: SnapMain.hs
-    Build-Depends: snap, snap-core, snap-server, lens, blaze-html >= 0.5,
-                   snap-blaze, bytestring == 0.9.2.1, xmlhtml, text,
-                   MonadCatchIO-transformers, snap-blaze, blaze-html,
-                   blaze-markup
-  else
-    Main-is: Main.hs
+  Build-Depends: snap, snap-core, snap-server, lens, blaze-html >= 0.5,
+                 snap-blaze, bytestring == 0.9.2.1, xmlhtml, text,
+                 MonadCatchIO-transformers, snap-blaze, blaze-html,
+                 blaze-markup, temporary
 
 Executable Test
   GHC-Options: -fhpc -hpcdir dist/build/Test/Mix/
