Selenium test framwork is added

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -25,3 +25,9 @@ Executable Test
   Build-Depends: base, directory, containers, filepath, time, parsec, mtl,
                  transformers, HUnit, test-framework, test-framework-hunit,
                  test-framework-quickcheck2, QuickCheck, unix
+
+Executable Selenium
+  Main-is: SeleniumMain.hs
+  HS-Source-Dirs: src, test
+  Build-Depends: base, directory, containers, filepath, time, parsec, mtl,
+                 transformers, selenium, network
