--- a/Bead.cabal
+++ b/Bead.cabal
@@ -16,7 +16,7 @@ Executable Bead
   Build-Depends: snap, snap-core, snap-server, lens, blaze-html >= 0.5,
                  snap-blaze, bytestring == 0.9.2.1, xmlhtml, text,
                  MonadCatchIO-transformers, snap-blaze, blaze-html,
-                 blaze-markup, temporary, unix
+                 blaze-markup, temporary, unix, deepseq
 
 Executable Test
   GHC-Options: -fhpc -hpcdir dist/build/Test/Mix/
@@ -24,7 +24,7 @@ Executable Test
   Main-is: TestMain.hs
   Build-Depends: base, directory, containers, filepath, time, parsec, mtl,
                  transformers, HUnit, test-framework, test-framework-hunit,
-                 test-framework-quickcheck2, QuickCheck, unix
+                 test-framework-quickcheck2, QuickCheck, unix, deepseq
 
 Executable Selenium
   Main-is: SeleniumMain.hs
