--- a/Bead.cabal
+++ b/Bead.cabal
@@ -16,7 +16,11 @@ Executable Bead
   Build-Depends: snap, snap-core, snap-server, lens, blaze-html >= 0.5,
                  snap-blaze, bytestring == 0.9.2.1, xmlhtml, text,
                  MonadCatchIO-transformers, snap-blaze, blaze-html,
-                 blaze-markup, temporary, unix, deepseq
+                 blaze-markup, temporary, deepseq, mtl, directory, filepath,
+                 transformers, time, containers, unix, base
+--                 blaze-markup, temporary, transformers, base, time,
+--                 containers
+
 
 Executable Test
   GHC-Options: -fhpc -hpcdir dist/build/Test/Mix/
