More testeability. WebDriver class is used in tests. Some high-level user story tests

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -29,10 +29,10 @@ Executable Bead
 --                 transformers, HUnit, test-framework, test-framework-hunit,
 --                 test-framework-quickcheck2, QuickCheck, unix, deepseq
 
---Executable WebDriver
---  Main-is: WebDriverMain.hs
---  HS-Source-Dirs: src, test
---  Build-Depends: base, directory, containers, filepath, time, parsec, mtl,
---                 transformers, network >= 2.4.1.0 , webdriver
+Executable WebDriver
+  Main-is: WebDriverMain.hs
+  HS-Source-Dirs: src, test
+  Build-Depends: base, directory, containers, filepath, time, parsec, mtl,
+                 transformers, network >= 2.4.1.0 , webdriver
 
 
