--- a/Bead.cabal
+++ b/Bead.cabal
@@ -14,8 +14,8 @@ Executable Bead
   Main-is: SnapMain.hs
   HS-Source-Dirs: src
   Build-Depends: snap, snap-core, snap-server, lens, blaze-html >= 0.5,
-                 snap-blaze, bytestring == 0.9.2.1, xmlhtml, text,
-                 MonadCatchIO-transformers, snap-blaze, blaze-html,
+                 snap-blaze, snaplet-fay == 0.3.2.0, bytestring == 0.9.2.1,
+                 MonadCatchIO-transformers, snap-blaze, blaze-html, xmlhtml, text,
                  blaze-markup, temporary, deepseq, mtl, directory, filepath,
                  transformers, time, containers, base,
                  unix
