--- a/Bead.cabal
+++ b/Bead.cabal
@@ -12,7 +12,7 @@ Cabal-Version: >= 1.2
 
 Executable Bead
   Main-is: SnapMain.hs
-  HS-Source-Dirs: src
+  HS-Source-Dirs: src, snaplets/fay/src
   Build-Depends: snap, snap-core, snap-server, lens, blaze-html >= 0.5,
                  snap-blaze, snaplet-fay == 0.3.2.0, bytestring == 0.9.2.1,
                  MonadCatchIO-transformers, snap-blaze, blaze-html, xmlhtml, text,
@@ -31,7 +31,7 @@ Executable Bead
 
 Executable WebDriver
   Main-is: WebDriverMain.hs
-  HS-Source-Dirs: src, test
+  HS-Source-Dirs: src, snaplets/fay/src, test
   Build-Depends: base, directory, containers, filepath, time, parsec, mtl,
                  transformers, network >= 2.4.1.0 , webdriver
 
