--- a/Bead.cabal
+++ b/Bead.cabal
@@ -15,6 +15,7 @@ Data-Files:
   snaplets/fay/src/Fay/JQueryUI.hs,
   snaplets/fay/src/DynamicContents.hs,
   snaplets/fay/src/Bead/Domain/Shared.hs,
+  snaplets/fay/src/Bead/View/Snap/Validators.hs,
   snaplets/fay/src/Bead/View/Snap/Fay/HookIds.hs,
   snaplets/fay/src/Bead/View/Snap/Fay/Hooks.hs,
 
