--- a/Bead.cabal
+++ b/Bead.cabal
@@ -47,8 +47,9 @@ Executable Bead
 
 
 --Executable Test
---  GHC-Options: -fhpc -hpcdir dist/build/Test/Mix/ -DTEST
---  HS-Source-Dirs: src, test
+--  GHC-Options: -fhpc -hpcdir dist/build/Test/Mix/
+--  CPP-Options: -DTEST -DEMAIL_REGISTRATION
+--  HS-Source-Dirs: src, snaplets/fay/src, test
 --  Main-is: TestMain.hs
 --  Build-Depends: base, directory, containers, filepath, time, parsec, mtl,
 --                 transformers, HUnit, test-framework, test-framework-hunit,
