--- a/Bead.cabal
+++ b/Bead.cabal
@@ -31,6 +31,9 @@ Data-Files:
 
   cookie
 
+  email/registration
+  email/forgottenpwd
+
 Flag Tests
   Description:  Enable testing
 
@@ -43,7 +46,7 @@ Executable Bead
                  MonadCatchIO-transformers, blaze-html, xmlhtml, text, aeson,
                  blaze-markup, temporary, deepseq, mtl, directory, filepath,
                  transformers, time, containers, base, fay == 0.14.5.0,
-                 unix, mime-mail, random
+                 unix, mime-mail, random, hastache, syb
 
 
 --Executable Test
