CRLF converted to LF before markdown conversation

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -46,7 +46,7 @@ Executable Bead
                  MonadCatchIO-transformers, blaze-html, xmlhtml, text, aeson,
                  blaze-markup, temporary, deepseq, mtl, directory, filepath,
                  transformers, time, containers, base, fay, utf8-string,
-                 unix, mime-mail, random, hastache, syb, pandoc
+                 unix, mime-mail, random, hastache, syb, pandoc, MissingH
 
 
 --Executable Test
