Configurable email from address

--- a/bead.config
+++ b/bead.config
@@ -1,5 +1,6 @@
 Config {
     userActionLogFile = "log/useractions.log"
   , sessionTimeout = 1200
-  , emailHostname = "http://128.0.0.1:8888"
+  , emailHostname = "http://127.0.0.1:8000"
+  , emailFromAddress = "noreply@bead.org"
   }
