--- a/Bead.cabal
+++ b/Bead.cabal
@@ -48,7 +48,8 @@ Executable Bead
                  MonadCatchIO-transformers, blaze-html, xmlhtml, text, aeson,
                  blaze-markup, temporary, deepseq, mtl, directory, filepath,
                  transformers, time, containers, base, fay, utf8-string,
-                 unix, mime-mail, random, hastache, syb, pandoc, MissingH
+                 unix, mime-mail, random, hastache, syb, pandoc, MissingH,
+                 old-locale
 
 
 --Executable Test
