--- a/Bead.cabal
+++ b/Bead.cabal
@@ -42,7 +42,6 @@ Flag Tests
 
 Executable Bead
   Main-is: SnapMain.hs
-  CPP-Options: -DEMAIL_REGISTRATION
   HS-Source-Dirs: src, snaplets/fay/src
   Build-Depends:
     aeson,
@@ -84,7 +83,7 @@ Executable Bead
 
 --Executable Test
 --  GHC-Options: -fhpc -hpcdir dist/build/Test/Mix/
---  CPP-Options: -DTEST -DEMAIL_REGISTRATION
+--  CPP-Options: -DTEST
 --  HS-Source-Dirs: src, snaplets/fay/src, test
 --  Main-is: TestMain.hs
 --  Build-Depends: base, directory, containers, filepath, time, parsec, mtl,
