Allow other minor version of fay jquery too

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -61,7 +61,7 @@ Executable Bead
     deepseq,
     directory,
     fay,
-    fay-jquery == 0.4.0.1,
+    fay-jquery == 0.4.0.*,
     fay-text,
     filepath,
     hastache,
