I18N User story errors, XID error message

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -59,6 +59,7 @@ Executable Bead
     clientsession,
     deepseq,
     directory,
+    hashable,
     fay,
     fay-jquery == 0.4.0.*,
     fay-text,
