First default login language can be configured in bead.config

--- a/bead.config
+++ b/bead.config
@@ -3,4 +3,5 @@ Config {
   , sessionTimeout = 1200
   , emailHostname = "http://127.0.0.1:8000"
   , emailFromAddress = "noreply@bead.org"
+  , defaultLoginLanguage = "en"
   }
