Regexp based username validation on the registration forms.

--- a/bead.config
+++ b/bead.config
@@ -4,4 +4,5 @@ Config {
   , emailHostname = "http://127.0.0.1:8000"
   , emailFromAddress = "noreply@bead.org"
   , defaultLoginLanguage = "en"
+  , usernameRegExp = "a+"
   }
