--- a/Bead.cabal
+++ b/Bead.cabal
@@ -74,6 +74,7 @@ Executable Bead
     pqueue >= 1.2.1 && < 2.0,
     mtl,
     random,
+    regex-posix,
     snap,
     snap-core,
     snap-server,
