--- a/bead.config
+++ b/bead.config
@@ -5,4 +5,5 @@ Config {
   , emailFromAddress = "noreply@bead.org"
   , defaultLoginLanguage = "en"
   , usernameRegExp = "a+"
+  , usernameRegExpExample = "username"
   }
