Default username is changed.

--- a/bead.config
+++ b/bead.config
@@ -4,6 +4,6 @@ Config {
   , emailHostname = "http://127.0.0.1:8000"
   , emailFromAddress = "noreply@bead.org"
   , defaultLoginLanguage = "en"
-  , usernameRegExp = "a+"
-  , usernameRegExpExample = "username"
+  , usernameRegExp = "^[A-Za-z0-9]{6}$"
+  , usernameRegExpExample = "QUER42"
   }
