Fay AJAX Framework with ping example.
Conflicts:
	src/Bead/View/Snap/Routing.hs

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -15,12 +15,14 @@ Data-Files:
   snaplets/fay/src/Fay/JQueryUI.hs,
   snaplets/fay/src/DynamicContents.hs,
   snaplets/fay/src/Bead/Domain/Shared/Evaluation.hs,
+  snaplets/fay/src/Bead/Shared/Command.hs,
   snaplets/fay/src/Bead/View/Snap/Validators.hs,
   snaplets/fay/src/Bead/View/Snap/Fay/HookIds.hs,
   snaplets/fay/src/Bead/View/Snap/Fay/Hooks.hs,
   snaplets/fay/src/Bead/View/Snap/Fay/JSON/ClientSide.hs,
 
   static/header.css,
+  static/helpers.js,
   static/inside.css,
   static/jquery-ui.css,
   static/jquery.js,
