--- a/Bead.cabal
+++ b/Bead.cabal
@@ -88,7 +88,7 @@ Executable Bead
     syb,
     temporary,
     text,
-    themis,
+    themis >= 0.1.2.0,
     time,
     transformers,
     utf8-string,
