--- a/bead.config
+++ b/bead.config
@@ -6,4 +6,5 @@ Config {
   , defaultLoginLanguage = "en"
   , usernameRegExp = "^[A-Za-z0-9]{6}$"
   , usernameRegExpExample = "QUER42"
+  , timeZoneInfoDirectory = "/usr/share/zoneinfo"
   }
