Maximum upload size.

--- a/bead.config
+++ b/bead.config
@@ -7,4 +7,5 @@ Config {
   , usernameRegExp = "^[A-Za-z0-9]{6}$"
   , usernameRegExpExample = "QUER42"
   , timeZoneInfoDirectory = "/usr/share/zoneinfo"
+  , maxUploadSizeInKb = 128
   }
