Button styled links on the submission tables.

--- a/Bead.cabal
+++ b/Bead.cabal
@@ -24,6 +24,7 @@ Data-Files:
 
   static/fonts/glyphicons-halflings-regular.woff,
   static/fonts/glyphicons-halflings-regular.ttf,
+  static/bootstrap.custombutton.css,
   static/bootstrap.min.css,
   static/bootstrap.min.js,
   static/bootstrap-combobox.css,
