--- a/Bead.cabal
+++ b/Bead.cabal
@@ -31,6 +31,7 @@ Data-Files:
   static/screen.css,
   static/images/*.png,
   static/images/*.gif,
+  static/preview/*.png,
   static/icon.ico,
 
   cookie
