LDAP based authentication for users. Part II.

--- a/bead.config
+++ b/bead.config
@@ -8,4 +8,5 @@ Config {
   , usernameRegExpExample = "QUER42"
   , timeZoneInfoDirectory = "/usr/share/zoneinfo"
   , maxUploadSizeInKb = 128
+  , nonLDAPUsersFile = "users.noldap"
   }
