--- a/bead.std.config
+++ b/bead.std.config
@@ -6,8 +6,8 @@ Config {
   , defaultLoginLanguage = "en"
   , timeZoneInfoDirectory = "/usr/share/zoneinfo"
   , maxUploadSizeInKb = 128
-  , loginConfig = LDAPLoginConfig {
-        nonLDAPUsersFile = Nothing
-      , defaultRegistrationTimezone = "UTC"
+  , loginConfig = StandaloneLoginConfig {
+        usernameRegExp = "^[A-Za-z0-9]{6}$"
+      , usernameRegExpExample = "QUER42"
       }
   }
