--- a/bead.config
+++ b/bead.config
@@ -1,13 +1,18 @@
-Config {
-    userActionLogFile = "log/useractions.log"
-  , sessionTimeout = 1200
-  , emailHostname = "http://127.0.0.1:8000"
-  , emailFromAddress = "noreply@bead.org"
-  , defaultLoginLanguage = "en"
-  , timeZoneInfoDirectory = "/usr/share/zoneinfo"
-  , maxUploadSizeInKb = 128
-  , loginConfig = LDAPLoginConfig {
-        nonLDAPUsersFile = Nothing
-      , defaultRegistrationTimezone = "UTC"
-      }
-  }
+
+user-actions-log:          "log/useractions.log"
+
+session-timeout:          1200
+
+hostname-for-emails:      "http://127.0.0.1:8000"
+
+from-email-address:       "noreply@bead.org"
+
+default-login-language:   "en"
+
+timezone-info-directory: "/usr/share/zoneinfo"
+
+max-upload-size:          128
+
+login-config:
+  ldap:
+    default-timezone:     "UTC"
