LDAP based authentication for users. Part V: LDAP related configurations.

--- a/bead.config
+++ b/bead.config
@@ -1,5 +1,5 @@
 
-user-actions-log:          "log/useractions.log"
+user-actions-log:         "log/useractions.log"
 
 session-timeout:          1200
 
@@ -9,10 +9,16 @@ from-email-address:       "noreply@bead.org"
 
 default-login-language:   "en"
 
-timezone-info-directory: "/usr/share/zoneinfo"
+timezone-info-directory:  "/usr/share/zoneinfo"
 
 max-upload-size:          128
 
 login-config:
   ldap:
-    default-timezone:     "UTC"
+    default-timezone:      "UTC"
+    ticket-temporary-dir:   '/tmp/'
+    login-time-out-in-sec: 5
+    no-of-login-threads:   4
+    uid-key:   'uid'
+    name-key:  'name'
+    email-key: 'email'
