Fix build with the flags "LDAP" disabled and "SQLite", "Tests" enabled.
While here, (hopefully) simplify handling configuration data by parsing only
the relevant login configuration that has been set at compile time.  That is,
for example, when the server was built with LDAP support, it will not
understand the standalone login settings at all.

Also, bubble the settings for the default time zone (at registration) up to
the common options, making it independent from the login configuration.

--- a/bead.config
+++ b/bead.config
@@ -1,24 +1,25 @@
+# N.B.: This is a sample configuration file.  It will NOT work as it is, a
+# login-config must be chosen and the settings must be edited accordingly.
 
 user-actions-log:         "log/useractions.log"
-
-session-timeout:          1200
-
+session-timeout:          1200 # sec
 hostname-for-emails:      "http://127.0.0.1:8000"
-
 from-email-address:       "noreply@bead.org"
-
 default-login-language:   "en"
-
+default-timezone:         "UTC"
 timezone-info-directory:  "/usr/share/zoneinfo"
+max-upload-size:          128 # KiB
 
-max-upload-size:          128
-
+# Please choose either "standalone" or "ldap"
 login-config:
-  ldap:
-    default-timezone:      "UTC"
-    ticket-temporary-dir:   '/tmp/'
-    login-time-out-in-sec: 5
-    no-of-login-threads:   4
-    uid-key:   'uid'
-    name-key:  'name'
-    email-key: 'email'
+# standalone:
+  username-regexp:          "^[A-Za-z0-9]{6}$"
+  username-regexp-example:  "QUER42"
+
+# ldap:
+  ticket-temporary-dir:  '/tmp/'
+  login-time-out-in-sec: 5
+  no-of-login-threads:   4
+  uid-key:   'uid'
+  name-key:  'name'
+  email-key: 'email'
